# Adversarial-LLM-Security-and-Prompt-Injection-Detector

./: .gitignore  Makefile  README.md  pyproject.toml
config/: base.yaml  production.yaml
scripts/: evaluate.py  export_onnx.py  serve.py  train.py
src/detector/: config.py
src/detector/api/: app.py  dependencies.py  middleware.py  routes.py  schemas.py
src/detector/data/: loader.py  preprocessor.py  schema.py
src/detector/evaluation/: benchmark.py  metrics.py
src/detector/inference/: predictor.py  threshold.py
src/detector/model/: classifier.py  factory.py  onnx_export.py
src/detector/training/: callbacks.py  trainer.py
tests/: conftest.py
tests/fixtures/: sample_prompts.json
tests/integration/: test_api.py  test_training_loop.py
tests/unit/: test_metrics.py  test_predictor.py  test_preprocessor.py  test_threshold.py
